aligned text-boxes correctly

--- a/weather-app/src/components/Form-Folder/form-styles.css
+++ b/weather-app/src/components/Form-Folder/form-styles.css
@@ -1,9 +1,11 @@
+
+
 .searchbox_1{
     background-color: #fffbf8;
     opacity:.85;
     padding:10px;
     width:328px;
-    margin: 100px auto;
+    margin: 50px 10px;
     -webkit-box-sizing:border-box;
     -moz-box-sizing:border-box;
     box-sizing:border-box;
