--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -2,12 +2,13 @@
 .background-day {
   background-image: url('https://i.imgur.com/5LaaFse.jpg');
   height: 100vh;
-  background-size: cover;
+  width: 100%;
 }
 
 .background-night {
   background-image: url('https://external-preview.redd.it/JRbrwhI6yMhJiomdFCNJn6IH399Uo7SbHusOnXT8-uM.jpg?auto=webp&s=12a668dff56e9993dd27065ae673189b37189084'); 
   height: 100vh;
+  width: 100%;
 }
 
 .show-card {
@@ -19,4 +20,23 @@
   display: none;
 }
 
+.text-box-right {
+  float:left;
+  background:rgba(28, 27, 36, 0.9);
+  width: 50%;
+  height: 100vw;
+  align-content: center;
+}
+
+.text-box-left{
+  float: left;
+  width: 50%;
+  height: 100vw;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
